<resources>
    <string name="app_name">Adaptive Finance</string>

    <string name="general_set_up_title">GENERAL SET UP</string>
    <string name="default_currency_title">SELECT DEFAULT CURRENCY</string>
    <string name="language_selector_title">SELECT LANGUAGE</string>

    <string name="set_up_account_title">ACCOUNT SET UP</string>
    <string name="cash_all_title">CASH (ALL)</string>
    <string name="bank_all_title">BANK (ALL)</string>

    <string name="optional_text_edit_hint">OPTIONAL</string>
    <string name="done_button_text">DONE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_overview_customization">OVERVIEW CUSTOMIZATION</string>
    <string name="net_balance">Net Balance</string>
    <string name="refresh">Refresh</string>
    <string name="overview_toolbar_title">OVERVIEW</string>
    <string name="no_transactions_message">No recent transaction found.</string>
    <string name="add_transaction_message">Tap on + icon below to record a new transaction.</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="title_activity_reports">VIEW REPORTS</string>
    <string name="tab_text_1">EXPENSE</string>
    <string name="tab_text_2">INCOME</string>
    <string name="tab_text_3">CASH FLOW</string>
    <string name="tab_text_4">BALANCE</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="expense_by_category_option_text">Expense By Category</string>
    <string name="expense_by_category_option_subtext">View your expenses broken down by categories for specific accounts and date periods</string>
    <string name="daily_expense_option_text">Daily Expense</string>
    <string name="daily_expense_option_subtext">View your last seven days breakdown of your expenses by specific accounts</string>
    <string name="monthly_expense_option_text">Monthly Expense</string>
    <string name="monthly_expense_option_subtext">View a month by month breakdown of your expenses by specific accounts</string>
    <string name="daily_income_option_text">Daily Income</string>
    <string name="daily_income_option_subtext">View last seven days breakdown of your incomes by specific accounts</string>
    <string name="monthly_income_option_text">Monthly Income</string>
    <string name="monthly_income_option_subtext">View a month by month breakdown of your income by specific accounts</string>
    <string name="income_vs_expense_option_text">Income Vs Expense</string>
    <string name="income_vs_expense_option_subtext">Compare your total expenses and income</string>
    <string name="daily_balance_option_text">Daily Balance</string>
    <string name="daily_balance_option_subtext">Compare your income and expenses on a daily basis</string>
    <string name="optional_label">OPTIONAL</string>
    <string name="select_action_subtitle">Select Action</string>
    <string name="set_action_as_default_text">Set action as default</string>
    <string name="view_transactions_text">View Transactions</string>
    <string name="action_search">action_search</string>
    <string name="transaction_account_spinner_text">ACCOUNT</string>
    <string name="transaction_text">TRANSACTIONS</string>
    <string name="opening_balance_text">Opening Balance</string>
    <string name="opening_balance_money_text">$0.00</string>
    <string name="opening_date_balance_text">(1 MAR 2018)</string>
    <string name="no_transaction_found_text">NO TRANSACTION FOUND!</string>
    <string name="cancel_text">CANCEL</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="save_button_text">SAVE</string>
    <string name="notification_shortcut_text">NOTIFICATION SHORTCUT</string>
    <string name="optional_settings_text">OPTIONAL SETTINGS</string>
    <string name="hide_text">HIDE</string>
    <string name="exclude_from_total_balance_text">EXCLUDE FROM TOTAL BALANCE</string>
    <string name="default_transaction_status_text">DEFAULT TRANSACTION STATUS</string>
    <string name="monthly_budget_optional_text">MONTHLY BUDGET (OPTIONAL)</string>
    <string name="monthly_budget_optional_amount">0.00</string>
    <string name="add_transaction_via_notification_text">ADD TRANSACTION VIA NOTIFICATION</string>
    <string name="enter_description_hint">Enter Description</string>
    <string name="starting_balance_text">STARTING BALANCE</string>
    <string name="currency_text">CURRENCY</string>
    <string name="account_name_text">ACCOUNT NAME</string>
    <string name="enter_account_name_hint">Enter Account Name</string>
    <string name="change_icon_text">CHANGE ICON</string>
    <string name="currency_type_text">CAD</string>
    <string name="yes_option_text">YES</string>
    <string name="no_option_text">NO</string>
    <string name="selected_account_text">TEST</string>
    <string name="amount_text">0.00</string>
    <string name="enter_payee_item_hint">Enter Payee / Item</string>
    <string name="select_category_hint">Select Category</string>
    <string name="notes_hint">Notes (Eg: Check #)</string>
    <string name="date_text">DATE</string>
    <string name="repeats_every_text">REPEATS EVERY</string>
    <string name="unlimited_text">UNLIMITED</string>
    <string name="for_text">FOR</string>
    <string name="times_text">Time(s)</string>
    <string name="until_text">UNTIL</string>
    <string name="next_transaction_date_text">NEXT TRANSACTION DATE</string>
    <string name="status_spinner_text">STATUS</string>
    <string name="project_spinner_text">PROJECT</string>
    <string name="project_default_text">None</string>
    <string name="does_not_repeat_radio_button_text">DOES NOT REPEAT</string>
    <string name="repeats_radio_button_text">REPEATS</string>
    <string name="no_completion_date_text">No completion date</string>
    <string name="completion_date_on_today_text">Completion date on</string>
    <string name="there_will_be_number_repeats_text">There will be NUMBER repeats</string>
    <string name="until_date_text">Date</string>
    <string name="transaction_period_spinner_text">PERIOD</string>
    <string name="starting_balance_amount">0.00</string>
    <string name="no_account_found_text">No Account Found!</string>
    <string name="today_balance_amount">$0.00</string>
    <string name="today_balance_toolbar_text">Today\'s Balance</string>

    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_text">Need an account? Register here!</string>
    <string name="register_button">Register Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="sign_in_link">Already have an account? Sign in!</string>
    <string name="net_balance_overview_account_text">Net Balance (CAD): $0.00</string>
    <string name="menu_item_switch_to_compact_mode_text">Switch To Compact Mode</string>
    <string name="total_balance_text">Total Balance (CAD): $0.00</string>
    <string name="account_name_listview_text">test</string>
    <string name="account_description_listview_text">test</string>
    <string name="account_balance_listview_text">$0.00</string>
</resources>
