<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transactionHeaderColor"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/transaction_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ic_menu_swap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_balance_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/menu_item_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/opening_date_balance_text"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/openingBalanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/opening_balance_money_text"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_transaction_found_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>