<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.daigler.adaptivefinance.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fullNameRegisterTextInputLayout"
            android:background="#2FFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorLoginRegisterTextView"
            android:backgroundTint="@color/colorLoginRegisterTextView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fullNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full_name"
                android:textColor="@color/colorLoginRegisterTextView"
                android:textColorHint="@color/colorLoginRegisterTextView"
                android:backgroundTint="@color/colorLoginRegisterTextView"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameRegisterTextInputLayout"
            android:background="#2FFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorLoginRegisterTextView"
            android:backgroundTint="@color/colorLoginRegisterTextView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:textColor="@color/colorLoginRegisterTextView"
                android:textColorHint="@color/colorLoginRegisterTextView"
                android:backgroundTint="@color/colorLoginRegisterTextView"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordRegisterTextInputLayout"
            android:background="#2FFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorLoginRegisterTextView"
            android:backgroundTint="@color/colorLoginRegisterTextView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLoginRegisterTextView"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorLoginRegisterTextView"
                android:textColorHint="@color/colorLoginRegisterTextView" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordRegisterTextInputLayout"
            android:background="#2FFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorLoginRegisterTextView"
            android:backgroundTint="@color/colorLoginRegisterTextView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLoginRegisterTextView"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorLoginRegisterTextView"
                android:textColorHint="@color/colorLoginRegisterTextView" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"
            android:background="#008CBA"
            android:text="@string/register_button"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signInLinkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/sign_in_link"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>